# Personal-Projects

./: .gitignore  LICENSE.txt  README.md
C/: README.md
C/Bank Management System App/: CMakeLists.txt  README.md
C/Bank Management System App/src/: account_management.c  account_management.h  card_management.c  card_management.h  main.c  transaction_management.c  transaction_management.h  user_management.c  user_management.h
C/Bank Management System App/src/txtfiles/: data.txt  data_info.txt  default_user.txt  test_data.txt
C/Learning C/: README.md  TutorialNotes.c  oof.txt  test.txt
Java/: README.md
Java/Calculator no GUI/: README.md
Java/Calculator no GUI/src/: Calculator.java
Java/Converter/: BUILD  README.md
Java/Converter/src/: Converter.java
Java/Converter/src/conversion/area/: AreaMiddleMan.java  ImperialToMetric.java  MetricToImperial.java
Java/Converter/src/conversion/currency/: Currency.java  CurrencyMiddleMan.java
Java/Converter/src/conversion/data_storage/: DataStorage.java  DataStorageMiddleMan.java
Java/Converter/src/conversion/length_and_distance/: ImperialToMetric.java  LengthAndDistanceMiddleMan.java  MetricToImperial.java
Java/Converter/src/conversion/mass/: ImperialToMetric.java  MassMiddleMan.java  MetricToImperial.java
Java/Converter/src/conversion/miscellaneous/: Angles.java  AnglesMiddleMan.java  Energy.java  EnergyMiddleMan.java  Power.java  (+4 more)
Java/Tic Tac Toe/: README.md
Java/Tic Tac Toe/src/: GameBoard.java
Minesweeper/: CMakeLists.txt  README.md  game_board.cc  game_board.h  game_logic.cc  game_logic.h  main.cc
(+13 files in other folders)
